--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,4 +232,6 @@
     <string name="owner">owner</string>
     <string name="retrofit">retrofit</string>
     <string name="reponame">reponame</string>
+
+    <string name="mission_statement">Facebook’s mission is to give people the power to build community and bring the world closer together.</string>
 </resources>
