--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,59 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="home">Home</string>
 
+    <string name="waiting_msg">Waiting for message…</string>
+    <string name="row_label">Clicked on row</string>
+
+    <string name="one_hundred">100</string>
+    <string name="plus">+</string>
+    <string name="eight">8</string>
+    <string name="zero">0</string>
+    <string name="retry">Retry</string>
+    <string name="delay">Delay</string>
+    <string name="enter_a_valid_email_below">Enter a valid email below:</string>
+    <string name="password_than_8_chrs"><![CDATA[password (> than 8 chrs):]]></string>
+    <string name="number_between_1_amp_100"><![CDATA[number (between 1 & 100):]]></string>
+    <string name="submit">Submit</string>
+    <string name="start_simple_polling">Start simple polling</string>
+    <string name="start_increasingly_delayed_polling">Start increasingly delayed polling</string>
+    <string name="info_about_the_demo_will_show_up_here">Info about the demo will show up here</string>
+    <string name="concat">concat</string>
+    <string name="concat_eager">concat (eager)</string>
+    <string name="merge">merge</string>
+    <string name="merge_n_slower_disk">merge (slower disk)</string>
+    <string name="merge_n_optimized">merge (optimized)</string>
+    <string name="merge_n_optimized_slow_disk">merge (optimized) slow disk</string>
+    <string name="start_disk_network_call"><![CDATA[Start disk > network call]]></string>
+    <string name="log_contributors_of">Log contributors of:</string>
+    <string name="log_with_full_user_info">Log with full User Info:</string>
+    <string name="log_user_info">Log User Info:</string>
+    <string name="kaushikgopal">kaushikgopal</string>
+    <string name="start_operation">Start operation</string>
+    <string name="one">1</string>
+    <string name="tap">tap!</string>
+    <string name="button_1">Button 1</string>
+    <string name="button_2">Button 2</string>
+    <string name="start">Start</string>
+    <string name="i_amz_btn">I AMZ BTN</string>
+
+    <string name="custom_match_instructions">See CustomMatch.java for valid options or type something ending
+        in \"coffee\".
+    </string>
+    <string name="custom_match_hint">How do you like your coffee?</string>
+    <string name="validate">Validate</string>
+    <string name="good_choice">Good choice!</string>
+    <string name="bad_choice">Bad choice!</string>
+
+    <string name="hello_espresso">Hello Espresso!</string>
+    <string name="change_text">Change text</string>
+    <string name="type_something">type something…</string>
+    <string name="open_activity_and_change_text">Open activity and change text</string>
+
+    <string name="clear_cache_menu">Clear Caches</string>
+    <string name="clear_cache_complete_toast">Caches have been cleared</string>
+    <string name="imageview_description">Image Thumbnail</string>
+    <string name="no_network_connection_toast">No network connection found</string>
+
     <string name="todomvp">TodoMvp</string>
     <string name="add_task">New TO-DO</string>
     <string name="edit_task">Edit TO-DO</string>
@@ -304,4 +357,6 @@
             batched sensors can be used in the background (when the CPU is suspended), which
             requires manually flushing the sensor event queue before it overflows, which is not
             covered in this sample.</p></string>
+    <string name="idling_resource">Idling Resource</string>
+    <string name="button_open_camera">Take photo</string>
 </resources>
