--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="home">Home</string>
 
+    <string name="type_a_phone_number">Please enter a number…</string><string name="button_dial_number">Call Number</string><string name="button_pick_contact">Pick Number</string><string name="contacts_activity_placeholder">This a placeholder Activity for a contacts screen.
+    This activity is never opened and does not contain any real contact data for
+    keeping this sample simple and focused.
+</string><string name="warning_call_phone_permission">This app requires \'call phone\' permission to run</string>
+
     <string name="waiting_msg">Waiting for message…</string>
     <string name="row_label">Clicked on row</string>
 
