--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="home">Home</string>
 
+    <string name="title_entry_detail">Entry Detail</string>
+    <string name="sync_loading">Waiting for sync...</string>
+    <string name="description_refresh">Refresh</string>
+
     <string name="type_operand_one_hint">Type Operand 1</string>
     <string name="type_operand_two_hint">Type Operand 2</string>
     <string name="add_operation_text">Add</string>
