--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="home">Home</string>
 
+    <!-- This is a label on a menu item. Pressing this menu
+         item takes the user to the current day (today) in whatever view
+         (Day view, Week view, Agenda view, Month view) they are currently in. -->
+    <string name="goto_today">"Today"</string>
+
     <string name="edge_cases_page_title">Edge Cases</string>
     <string name="common_cases_page_title">Common Cases</string>
 
